myStyle.css
@media screen and (max-width: 600px) {
  #intro,
  #park1,
  #park2,
  #park3,
  #park4 {
    font-size: 30px;
  }
}

body {
  background: #41664f !important;
}

.parallax {
  background: url("img/sequoia-main.jpg") no-repeat center;
  background-size: cover;
  background-attachment: fixed;
  height: 500px;
  text-shadow: 2px 2px #000000;
}

.parallax2 {
  background: url("img/yosemite-main.jpg") no-repeat center;
  background-size: cover;
  background-attachment: fixed;
  height: 500px;
  text-shadow: 2px 2px #000000;
  margin-top: 150px;
}

.parallax3 {
  background: url("img/yellowstone-main.jpg") no-repeat center;
  background-size: cover;
  background-attachment: fixed;
  height: 500px;
  text-shadow: 2px 2px #000000;
  margin-top: 150px;
}

.parallax4 {
  background: url("img/grandCanyon-main.jpg") no-repeat center;
  background-size: cover;
  background-attachment: fixed;
  height: 500px;
  text-shadow: 2px 2px #000000;
  margin-top: 150px;
}

.infoPack {
  max-width: 470px;
  min-width: 224px;
  height: 550px;
  background-color: #9c9c9c;
  margin-top: 70px;
  text-align: center;
}

img {
  max-width: 100%;
}

p {
  padding-left: 15px;
  padding-top: 15px;
  padding-right: 15px;
}

h2 {
  padding-left: 15px;
  padding-top: 15px;
}

.infoLink {
  position: absolute;
  margin-bottom: 10px;
  bottom: 10px;
  left: 50%;
  margin-right: -50%;
  transform: translate(-50%, -50%);
}

.copyright {
  padding: 28px 0;
  margin-top: 55px;
  background-color: #202020;
}
.copyright span,
.copyright a {
  color: #878787;
  -webkit-transition: all 0.3s linear;
  -o-transition: all 0.3s linear;
  transition: all 0.3s linear;
}
.copyright a:hover {
  color: #007bff;
}

.copyright-menu ul {
  text-align: right;
  margin: 0;
}

.copyright-menu li {
  display: inline-block;
  padding-left: 20px;
}

.back-to-top {
  position: relative;
  z-index: 2;
  display: none;
}
.back-to-top .btn-dark {
  width: 35px;
  height: 35px;
  border-radius: 50%;
  padding: 0;
  position: fixed;
  bottom: 20px;
  right: 20px;
  background: #2e2e2e;
  border-color: #2e2e2e;
  display: none;
  z-index: 999;
  -webkit-transition: all 0.3s linear;
  -o-transition: all 0.3s linear;
  transition: all 0.3s linear;
}
.back-to-top .btn-dark:hover {
  cursor: pointer;
  background: #fa6742;
  border-color: #fa6742;
}

